does it still work?

--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@
             <img class="git-logo" src="./img/github.svg" alt="github" width="80px" height="80px">
         </a>
         <div class="logo-pacement">
-            <a href="./homepage.html">
+            <a href="localhost:8000">
                 <h1 class="logo">Turbobit</h1>
                 <p class="underlogo">FILE SHARING SERVICE</p>
             </a>
         </div>
-        <a href="./about.html" target="_blank">
+        <a href="./about.html" target="_self">
             <img class="qst-logo" src="./img/qstnew.svg" alt="about" width="80px" height="80px">
         </a>
     </header>
